--- a/assets/css/modun/_slide_input.scss
+++ b/assets/css/modun/_slide_input.scss
@@ -29,6 +29,9 @@
             align-items: center;
             flex-direction: column;
             position: relative;
+            p{
+                font-size: 3rem;
+            }
             input{
                 width: 80%;
                 height: 20%;
@@ -36,7 +39,7 @@
                 border-radius: 10px;
                 font-size: 3rem;
                 // padding: 0 50px;
-                padding-left: 50px;
+                padding-left: 20px;
             }
             input:focus {
                 outline-width: 0;
