--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,11 @@ $btn-search: #71b8b5;
 $btn-hover-serch: rgb(153, 194, 197);
 html{
     font-size: 62.5%;
-    font-family: 'Open Sans', sans-serif;
+}
+body{
+    background-color: #f4fcd92d;
+    // font-family: 'Times New Roman', Times, serif;
+    font-family: 'Lato', sans-serif;
 }
 
 @import '../css/modun/header';
@@ -17,4 +21,8 @@ html{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+.text_small{
+    color: $text-color;
+    font-size: 1.7rem !important;
 }
